# Cry_FirstPerson

./: .gitignore  Game.cryproject  system.cfg
Code/: Build.h  CMakeLists.txt  GamePlugin.cpp  GamePlugin.h  StdAfx.cpp  UsefulCryengineStuff.txt
Code/AI/: AI.h  HierarchicalState.cpp  HierarchicalState.h
Code/AI/Hive/: Combat.cpp  Combat.h  Explore.cpp
Code/Combat/: Abilities.cpp  Abilities.h  AbilityFactory.cpp  AbilityFactory.h  CombatSystem.cpp  CombatSystem.h  Targeting.cpp  Targeting.h
Code/Components/: Bullet.h  SpawnPoint.cpp  SpawnPoint.h
Code/Components/AI/: Pathfinder.cpp  Pathfinder.h
Code/Components/Behaviors/: Behaviors.h
Code/Components/Characters/: Character.cpp  Character.h  CharacterPlayerExtension.cpp  CharacterPlayerExtension.h
Code/Components/Combat/: EncounterSpawnPoint.cpp  EncounterSpawnPoint.h
Code/Components/Environment/: Rain.cpp  Rain.h
Code/Components/Game/: GameplayEntity.cpp  GameplayEntity.h  Stats.cpp  Stats.h  Stats_Deprecated.cpp  Stats_Deprecated.h
Code/Components/Hive/: Hive.cpp  Hive.h  HiveAgent.cpp  HiveAgent.h  HiveAgent_Deprecated.cpp  HiveAgent_Deprecated.h  Pheromone.cpp  Pheromone.h
Code/Components/Player/: CryFirstPersonPlayer.cpp  CryFirstPersonPlayer.h  Player.cpp  Player.h  PlayerEnxtension.h  PlayerExtension.cpp  PlayerExtension.h
Code/Components/Rewind/: Rewind.cpp  Rewind.h
Code/Components/Timeline/: TimelineEntity.cpp  TimelineEntity.h
Code/Dialogue/: DialogueManager.cpp  DialogueManager.h
Code/Game/: AudioController.cpp  AudioController.h  CameraController.cpp  CameraController.h  EnvironmentController.cpp  EnvironmentController.h  RewindManager.cpp  RewindManager.h  UIController.cpp  UIController.h
Code/Gameflow/: Gameflow.cpp  Gameflow.h  GameflowInput.cpp  GameflowInput.h  GameflowManager.cpp  GameflowManager.h  GameflowPhase.cpp  GameflowPhase.h
Code/Gameflow/Combat/: ActionPhase.cpp  ActionPhase.h  CombatGameflow.cpp  CombatGameflow.h  CombatGameflowPhases.h  EnemyEndPhase.cpp  EnemyEndPhase.h  EnemyPhase.cpp  EnemyPhase.h  PlayerEndPhase.cpp  PlayerEndPhase.h  PlayerPhase.cpp  PlayerPhase.h
Code/Optimization/: AutoOptimizer.cpp  AutoOptimizer.h  OptimizationManager.cpp  OptimizationManager.h
Code/Solution/: TODO.txt
Code/Timeline/: FrameCaptureManager.cpp  FrameCaptureManager.h  TimelineManager.cpp  TimelineManager.h
Code/Timeline/Old/: FrameCapture.cpp  FrameCapture.h
Code/Types/: BindableGeneric.h  Flags.h  Generic.h  MinMaxVar.h  MovingAverage.h  Static_TypeId.h  Stats.h
Code/UI/: DialogueEditor.cpp  DialogueEditor.h  EntityHud.cpp  EntityHud.h  Hud.cpp  Hud.h  SpeechBubbles.cpp  SpeechBubbles.h
Code/Utils/: AutoFunctionRegister.h  ConsoleCommands.cpp  ConsoleCommands.h  DebugUtils.h  ExposeVariables.h  MathUtils.h  Utils.h  VectorUtils.h
Code/Utils/Files/: FileManager.cpp  FileManager.h
Code/Utils/Initialization/: DeferredInitialization.cpp  DeferredInitialization.h
Code/Utils/Macros/: Checks.h  Properties.h  (+2 more)
(+7766 files in other folders)
